添加Redisson进行redis缓存数据的操作。

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ server.port=8080
 #spring.main.banner-mode=off
 #访问项目启动时的前缀
 #server.servlet.context-path=/a
+#指定启动文件名称
+#spring.profiles.active=
 #打通数据通路
 spring.datasource.name=i_mall
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
