--- a/pom.xml
+++ b/pom.xml
@@ -72,14 +72,19 @@
             <artifactId>pagehelper-spring-boot-starter</artifactId>
             <version>1.2.13</version>
         </dependency>
-        <!--redis缓存，它主要用于实现方法级的缓存-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
+        <!--redis缓存，它主要用于实现方法级的缓存-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
+        <!--使用spring session保存用户session，做到后端多节点同步登录信息-->
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-data-redis</artifactId>
         </dependency>
         <!--redis保存用户验证码，适用于直接操作 Redis 数据的场景-->
         <dependency>
