--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 #更改默认端口号
 server.port=8080
+#指定Mapper.xml文件的位置；
+mybatis.mapper-locations=classpath:mappers/*.xml
 #springboot启动时的ascii艺术字
 #spring.main.banner-mode=off
 #访问项目启动时的前缀
@@ -16,29 +18,28 @@ spring.datasource.password=root
 #格式化数据
 spring.jackson.time-zone=GMT+8
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
-#指定Mapper.xml文件的位置；
-mybatis.mapper-locations=classpath:mappers/*.xml
+
 
 # 配置redis的信息,ip port password,在application中打开spring的缓存
 # REDIS (RedisProperties)
-# Redis数据库索引（默认为0）
-spring.redis.database=0
-# Redis服务器地址
-spring.redis.host=124.220.196.193
-# Redis服务器连接端口
-spring.redis.port=6379
-# 密码
-spring.redis.password=123456
-# 连接池最大连接数（使用负值表示没有限制）
-spring.redis.jedis.pool.max-active=8
-# 连接池最大阻塞等待时间（使用负值表示没有限制）
-spring.redis.jedis.pool.max-wait=-1
-# 连接池中的最大空闲连接
-spring.redis.jedis.pool.max-idle=8
-# 连接池中的最小空闲连接
-spring.redis.jedis.pool.min-idle=0
-# 连接超时时间（毫秒）
-spring.redis.timeout=6000
+## Redis数据库索引（默认为0）
+#spring.redis.database=0
+## Redis服务器地址
+#spring.redis.host=124.220.196.193
+## Redis服务器连接端口
+#spring.redis.port=6379
+## 密码
+#spring.redis.password=123456
+## 连接池最大连接数（使用负值表示没有限制）
+#spring.redis.jedis.pool.max-active=8
+## 连接池最大阻塞等待时间（使用负值表示没有限制）
+#spring.redis.jedis.pool.max-wait=-1
+## 连接池中的最大空闲连接
+#spring.redis.jedis.pool.max-idle=8
+## 连接池中的最小空闲连接
+#spring.redis.jedis.pool.min-idle=0
+## 连接超时时间（毫秒）
+#spring.redis.timeout=6000
 #配置文件上传的路径，最后有“/”
 file.upload.dir.product=/imallImages/productImgs/
 file.upload.dir.pay=/imallImages/payImgs/
@@ -77,6 +78,11 @@ spring.freemarker.suffix=.ftl
 spring.freemarker.charset=UTF-8
 #模板位置
 spring.freemarker.template-loader-path=classpath:/templates/
+#spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+
+
+
+
 
 
 
