--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,12 @@
             <artifactId>pinyin4j</artifactId>
             <version>2.5.1</version>
         </dependency>
+            <!-- mq-->
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+        </dependency>
+
 
     </dependencies>
 
