--- a/src/main/resources/application-git.properties
+++ b/src/main/resources/application-git.properties
@@ -28,12 +28,12 @@ server.tomcat.uri-encoding=UTF-8
 # Redis数据库索引（默认为0）
 spring.redis.database=0
 # Redis服务器地址
-spring.redis.host=47.122.19.70
+spring.redis.host=*******
 # Redis服务器连接端口
 spring.redis.port=39001
 #spring.redis.port=6379
 # 密码
-spring.redis.password=123456
+spring.redis.password=******
 # 连接池最大连接数（使用负值表示没有限制）
 spring.redis.jedis.pool.max-active=8
 # 连接池最大阻塞等待时间（使用负值表示没有限制）
@@ -55,8 +55,8 @@ spring.servlet.multipart.max-request-size=10MB
 
 #配置邮件客户端,qq发送邮件的服务器、发送邮箱、发送人邮箱授权码
 spring.mail.host=smtp.qq.com
-spring.mail.username=2785015696@qq.com
-spring.mail.password=ojzjrrxqssdbdhab
+spring.mail.username=********
+spring.mail.password=*******
 #版权
 icode=ZhangHewen
 
