--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,84 +1,9 @@
-#更改默认端口号
-server.port=8080
-#指定Mapper.xml文件的位置；
-mybatis.mapper-locations=classpath:mappers/*.xml
-#springboot启动时的ascii艺术字
-#spring.main.banner-mode=off
-#访问项目启动时的前缀
-#server.servlet.context-path=/a
-#指定启动文件名称
-#spring.profiles.active=
-#打通数据通路
-spring.datasource.name=i_mall
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/i_mall?serverTimezone=Asia/Shanghai&characterEncoding=utf-8&useSSl=true&useUnicode=true&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=root
-#spring.datasource.password=123456
-#格式化数据
-spring.jackson.time-zone=GMT+8
-spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
-
-
-# 配置redis的信息,ip port password,在application中打开spring的缓存
-# REDIS (RedisProperties)
-## Redis数据库索引（默认为0）
-#spring.redis.database=0
-## Redis服务器地址
-#spring.redis.host=124.220.196.193
-## Redis服务器连接端口
-#spring.redis.port=6379
-## 密码
-#spring.redis.password=123456
-## 连接池最大连接数（使用负值表示没有限制）
-#spring.redis.jedis.pool.max-active=8
-## 连接池最大阻塞等待时间（使用负值表示没有限制）
-#spring.redis.jedis.pool.max-wait=-1
-## 连接池中的最大空闲连接
-#spring.redis.jedis.pool.max-idle=8
-## 连接池中的最小空闲连接
-#spring.redis.jedis.pool.min-idle=0
-## 连接超时时间（毫秒）
-#spring.redis.timeout=6000
-#配置文件上传的路径，最后有“/”
-file.upload.dir.product=/imallImages/productImgs/
-file.upload.dir.pay=/imallImages/payImgs/
-#二维码图片的IP，生产环境IP
-file.upload.ip=127.0.0.1
-#配置上传文件大小
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
-
-#配置邮件客户端,qq发送邮件的服务器
-# qq邮箱为smtp.qq.com          端口号465或587
-# sina    smtp.sina.cn
-# aliyun  smtp.aliyun.com
-# 163     smtp.163.com       端口号465或994
-spring.mail.host=smtp.qq.com
-#发送邮箱
-spring.mail.username=2785015696@qq.com
-#邮箱授权码
-spring.mail.password=vqyfvyxtukwldgid
-#QQ邮箱端口
-spring.mail.port=587
-#设置超时
-#spring.mail.properties.mail.smtp.timeout=10000
-#spring.mail.properties.mail.smtp.connectiontimeout=10000
-#spring.mail.properties.mail.smtp.writetimeout=10000
-#编码
-spring.mail.default-encoding=utf-8
+spring.profiles.active=prod
 
 
 
-#freemarker模板，开发阶段关闭缓存
-spring.freemarker.cache=false
-#后缀
-spring.freemarker.suffix=.ftl
-#编码
-spring.freemarker.charset=UTF-8
-#模板位置
-spring.freemarker.template-loader-path=classpath:/templates/
-#spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+
+
 
 
 
